# carapace

./: Cargo.toml  Makefile  README.md  build.rs  cmd.rs
proto/: carapace_command.proto
proto/clients/js/: carapace_command_grpc_web_pb.js  carapace_command_pb.js
src/: client.rs  commander.rs  server.rs
