[package]
name = "carapace"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "carapace-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "carapace-client"
path = "src/client.rs"

[dependencies]
http = "0.2.8"
# tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = { git = "https://github.com/hyperium/tonic", version = "0.8.2" }
tonic-web = { git = "https://github.com/hyperium/tonic", version = "0.4.0" }
tower-http = "0.3.4"

[build-dependencies]
tonic-build = "0.8"
